Add Endpoints for post, and update community endpoint
